--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,18 @@
 			<artifactId>reactor-extra</artifactId>
 			<version>3.5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+			<version>3.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>3.1.6</version>
+		</dependency>
+
 		<!-- springdoc -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
