--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   main:
     web-application-type: reactive
@@ -9,5 +7,5 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
 
-#logging:
-#  config: classpath:log4j2.xml
+logging:
+  config: classpath:log4j2.xml
